tests/params/compile-fail/duplicate_param.stderr
error: duplicate parameter `Dup`
 --> tests/params/compile-fail/duplicate_param.rs:6:3
  |
6 |         Dup,
  |         ^^^
